src/objects/ONEN_Household__c.object
<CustomObject>
    <description>Physical mailing address for grouping contacts</description>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Donor wants to be anonymous</description>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Maintenance__c</fullName>
        <formula>HYPERLINK(&quot;/apex/copyAddress?id=&quot; &amp; Id  &amp; &quot;&amp;direction=toContact&quot;, IMAGE( &quot;servlet/servlet.FileDownload?file=01570000000iBwd&quot;, &quot;image from Documents tab&quot;), &quot;_top&quot;)</formula>
        <label>Household Maintenance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <inlineHelpText>Brackets and international codes are not allowed.
A space MUST be used after the dialling code and spaces at the expected points within the remainder of the number can be used if need be (e.g. 0208 6473 373 is the same as 0208 647 3373 and 0208 6473373)</inlineHelpText>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recognition_Name_Short__c</fullName>
        <description>Short version of prefered</description>
        <label>Recognition Name - Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recognition_Name__c</fullName>
        <description>Preferred name when recognizing gifts</description>
        <label>Recognition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>household_id__c</fullName>
        <description>for migration</description>
        <label>household id</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Household</label>
    <nameField>
        <label>Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Households</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>